; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_variax.c_variax_set_tone.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_variax.c_variax_set_tone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.usb_line6_variax = type { i32, i32 }

@VARIAXMIDI_tone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @variax_set_tone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @variax_set_tone(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.usb_line6_variax*, align 8
  %10 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load %struct.device*, %struct.device** %5, align 8
  %12 = call i32 @to_usb_interface(%struct.device* %11)
  %13 = call %struct.usb_line6_variax* @usb_get_intfdata(i32 %12)
  store %struct.usb_line6_variax* %13, %struct.usb_line6_variax** %9, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @simple_strtoul(i8* %14, i32* null, i32 10)
  store i32 %15, i32* %10, align 4
  %16 = load %struct.usb_line6_variax*, %struct.usb_line6_variax** %9, align 8
  %17 = getelementptr inbounds %struct.usb_line6_variax, %struct.usb_line6_variax* %16, i32 0, i32 1
  %18 = load i32, i32* @VARIAXMIDI_tone, align 4
  %19 = load i32, i32* %10, align 4
  %20 = call i64 @line6_transmit_parameter(i32* %17, i32 %18, i32 %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %4
  %23 = load i32, i32* %10, align 4
  %24 = load %struct.usb_line6_variax*, %struct.usb_line6_variax** %9, align 8
  %25 = getelementptr inbounds %struct.usb_line6_variax, %struct.usb_line6_variax* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  br label %26

26:                                               ; preds = %22, %4
  %27 = load i64, i64* %8, align 8
  ret i64 %27
}

declare dso_local %struct.usb_line6_variax* @usb_get_intfdata(i32) #1

declare dso_local i32 @to_usb_interface(%struct.device*) #1

declare dso_local i32 @simple_strtoul(i8*, i32*, i32) #1

declare dso_local i64 @line6_transmit_parameter(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
